# rl-cs4

./: .gitignore  Cargo.toml
benches/: avs.rs
models/: bench_model.py  model.py  smallstack4.py  stack4_model.py
resources/: avg_perf.ipynb  avg_perf_stack4.ipynb  plot_score.py
src/: QLearning.rs  agents.rs  connect4.rs  evaluators.rs  lib.rs  main.rs  matchmaker.rs  minimax.rs  policies.rs  qlearning.rs  search.rs
src/evaluators/: cnn.rs  consequtive.rs  lines.rs  mod.rs  simple.rs
src/games/: connect4.rs  mod.rs  stack4.rs
static/: game.js  index.html  style.css
