[package]
name = "new-rl-connect4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand="1.7.0"
serde={version="1.0.136", features=["derive"]}
serde_json="1.0.59"
clap = { version = "3.1.2", features=["derive"]}
typetag="0.1.8"
tch = "0.6.1"
anyhow = "1.0.55"
actix-web = "4.0"
actix-files = "0.6"
lazy_static="1.4"
num-traits = "0.2"
num-derive = "0.3"
env_logger = "0.9"
futures = "0.3"
smallvec = "1.8"
signal-hook="0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "avs"
harness = false

[lib]
name = "gamesolver"
path = "src/lib.rs"

[[bin]]
name="gametrainer"
path = "src/bin/main.rs"

[[bin]]
name="server"
path="src/bin/server.rs"

[profile.release]
debug = true